...
    <string name="settings_category_tools_label">Tools</string>
    <string name="settings_category_other_label">Other</string>
    <string name="settings_category_integration_label">Integration</string>
    <string name="general_settings_label">General</string>
    <string name="general_settings_desc">General tweaks that affect the whole app.</string>
    <string name="settings_category_ui_label">User interface</string>
    <string name="ui_mascot_suit_setting_label">Butler\'s suit</string>
    <string name="ui_mascot_suit_setting_explanation">The color Butler\'s outfit is tailored from.</string>
    <string name="ui_theme_mode_setting_label">Theme mode</string>
    <string name="ui_theme_mode_setting_explanation">The mode used when theming the app (e.g. night or day).</string>
    <string name="ui_theme_style_setting_label">Theme style</string>
    <string name="ui_theme_style_setting_explanation">The color style used when theming the app.</string>
    <string name="ui_theme_color_setting_label">Theme color</string>
    <string name="ui_theme_color_setting_explanation">The color palette used for theming the app.</string>
    <string name="ui_theme_color_setting_disabled_materialyou">Colors are provided by Material You from your wallpaper</string>
...
